// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/item-details/EditableDescription should render default component 1`] = `
<TextareaAutosize
  className="description-textarea"
  data-resin-target="description"
  inputRef={[Function]}
  maxLength="255"
  maxRows={6}
  onBlur={[Function]}
  onChange={[Function]}
  onHeightChange={[Function]}
  placeholder="message"
  useCacheForDOMMeasurements={false}
  value=""
/>
`;

exports[`features/item-details/EditableDescription should set default value and additional props when specified 1`] = `
<TextareaAutosize
  className="description-textarea"
  inputRef={[Function]}
  maxLength="255"
  maxRows={6}
  minLength={25}
  onBlur={[Function]}
  onChange={[Function]}
  onHeightChange={[Function]}
  placeholder="message"
  useCacheForDOMMeasurements={false}
  value="description"
/>
`;
